--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7",
-    "sqlite3": "^5.1.7"
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
     "prisma": "^5.22.0",
